Homepage and Mission

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "TOCACares",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery-match-height": "^0.7.2"
+  }
 }
